# 20251214
Enable save button immediately on edit

# 2025-12-11
X - make search window wider
X - Put "folders first" sorting checkbox in main bar (move it outside of the list)
X - Reformat modification date in file subtitles
X - Add cut button
X - Edit title from inside
X - Highlight newly created file
X - Update highlight to renamed file
X - update Creating a note should move the highlight
X - Create a separate bar for title on top. Put the buttons bar below, directly on top of keyboard.
X - Focus keyboard when search button is pressed
X - Button for immediately go back to notes list
X - when starring files; unselect all (as if you press back button)
X - rename note after being opened by pressing on title
X - button to insert dash at line beginning
X - Change font size scroll to buttons

# Earlier:
X - Show note size
X - Swipe right to delete note (with dialog)
X - Bug: top system bar invisible on 4a
X - Visibility: pointer not visible inside highlights
X - Visibility: invisible selection color within highlights when selecting text
X - update selection icon
X - Made searching case insensitive
X - Made icons dark in top bar
X - Made top navigation bars light
X - Remove rename item from menu
X - Remove confirmation when deleting a note
X - Add swipe to rename (not: Rename note title from pressing `note title` on document edit screen/button to rename note.)
X - Remove cancel button when selecting
X - Fix theme when system dark mode is enabled (some window colours are correct).
X - show total notes count (including folders) on main screen
X - Add git integration info (add how to note in 'about' screen)
X - [m] 10. add % -- comments
X - [h] Make numbers smaller in numbered lines
X - make white bg of icon when starting up
X - [h] `Open with dialog` for odt,doc,docx,odtf,pdf (files not ending in .txt/md) (see implementation in original app).SEE DIALOG it shows you when you try to open an odt file
X - highlight recently opened file.